--- a/APAP/main/templates/main/home.html
+++ b/APAP/main/templates/main/home.html
@@ -120,6 +120,7 @@
         		elements[i].innerHTML = "--";
         		header[i].style.backgroundColor = "gray"
         		btn[i].style.backgroundColor = "gray"
+        		btn[i].style.visibility = "hidden"
         	}
         		
         	
