--- a/APAP/main/templates/main/upload.html
+++ b/APAP/main/templates/main/upload.html
@@ -19,7 +19,8 @@
             {{form.media}}
 
             </div>
-                 <button type="submit"> UPLOAD </button>
+                <input type="submit" class="btn buy-now" value=" UPLOAD ">
+                 {% comment %} <button type="submit" class="btn buy-now"> UPLOAD </button> {% endcomment %}
              </div>
         </form>
     </div>
