--- a/APAP/main/templates/main/detail.html
+++ b/APAP/main/templates/main/detail.html
@@ -3,7 +3,7 @@
 {% block content %}
   <div class = "box" style = "width: 500px; height: 500px;">
     <table class = "box" style = "text-align:left">
-    <p>강의명: {{schedule.lectures.name}}</p><br>
+    <p>강의명: {{print.schedule.lecture.name}}</p><br>
     <p>색상: {{print.color}}</p><br>
     <p>양면 인쇄: {{print.side}}</p><br>
     <p>용지당 페이지 수: {{print.gather}}</p><br>
