update upload css

--- a/APAP/main/templates/main/upload.html
+++ b/APAP/main/templates/main/upload.html
@@ -5,25 +5,41 @@
 {% load bootstrap4 %}
 {% bootstrap_css %}
 {% bootstrap_javascript jquery='full' %}
+<style>
+    input[type=submit] { background-color:white !important; class="btn buy-now" !important; border:none !important; box-shadow:none !important; width:120px !important;
+    height:50px !important; text-align="center" !important; border: 1px solid grey !important;}
+</style>
 
 <section class="question_area">
-    <div class="container">
-    <div class="main_title">
-        <h2>인쇄 설정</h2>
-    </div>
-    
+    <div class="container" style="padding-right:300px; padding-left:300px">
+        
+            <div class="main_title">
+                <h2>인쇄 설정</h2>
+            </div>
+        
         <form action="#" method="POST" enctype="multipart/form-data" novalidate>
             <div class="control-group">
             {% bootstrap_form form %}
             {% csrf_token %}
             {{form.media}}
-
+            <center>
+            <div class="form-group col-md-12 btn-lg">
+                <input type="submit" class="btn buy-now" value=" UPLOAD " style="font-size:20px;">
             </div>
-                <input type="submit" class="btn buy-now" value=" UPLOAD ">
-                 {% comment %} <button type="submit" class="btn buy-now"> UPLOAD </button> {% endcomment %}
-             </div>
+            </center>
+            {% comment %} <input type="submit" class="btn buy-now" align="center"value=" UPLOAD ">
+            {% comment %} <button type="submit" class="btn buy-now"> UPLOAD </button> {% endcomment %}
+            </div> 
         </form>
+        
     </div>
-</div>
+
 </section>
+{% comment %} <style>
+    input.transparent-input{
+       background-color:transparent !important;
+       border:none !important;
+       box-shadow:none !important;
+    }
+</style> {% endcomment %}
 {% endblock %}   
