--- a/APAP/settings/static/css/index/style.css
+++ b/APAP/settings/static/css/index/style.css
@@ -57,6 +57,14 @@ ul {
   padding: 0px;
 }
 
+/* .question_container {
+  width: 100%;
+  padding-right: 300px;
+  padding-left: 300px;
+  margin-right: auto;
+  margin-left: auto;
+} */
+
 a {
   text-decoration: none;
 }
