--- a/APAP/settings/static/scss/_feature.scss
+++ b/APAP/settings/static/scss/_feature.scss
@@ -414,7 +414,7 @@
 ============================================================================================ */
 .question_area{
     background: #EFF1FF;
-    padding: 100px 0px;
+    padding: 100px;
     .main_title{
         padding-bottom: 65px;
     }
