--- a/APAP/settings/static/css/style.css
+++ b/APAP/settings/static/css/style.css
@@ -207,13 +207,13 @@ body {
     font-size: 60px;
 }
 
-/* .hero-text h2 {
+.hero-text h2 {
     font-family: 'NanumSquareRound', sans-serif;
     color: #fff;
     font-weight: bold;
     text-transform: uppercase;
     font-size: 60px;
-} */
+}
 
 .hero-text h3 {
     font-family: 'Open Sans', sans-serif;
