--- a/APAP/templates/base_index.html
+++ b/APAP/templates/base_index.html
@@ -20,7 +20,7 @@
     <link href="{% static 'css/index/icofont.css' %}" rel="stylesheet">
 
     <!-- Bootstrap -->
-    <link href="{% static 'css/index/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/index/bootstrap.css' %}" rel="stylesheet">
 
     <!-- Rev slider css -->
     <link href="{% static 'vendors/revolution/css/settings.css' %}" rel="stylesheet">
