added print_price / delivery_price

--- a/APAP/main/templates/main/detail.html
+++ b/APAP/main/templates/main/detail.html
@@ -9,7 +9,8 @@
     <p>양면 인쇄: {{print.side}}</p><br>
     <p>용지당 페이지 수: {{print.gather}}</p><br>
     <p>페이지 방향: {{print.direction}}</p><br>
-    <p>배송비: {{print.price}}</p><br>
+    <p>배송비: {{print.delivery_price}}원</p><br>
+    <p>인쇄비: {{print.print_price}}원</p><br>
     <p>종료일시: {{print.date}}</p><br>
     <p>인쇄 파일 업로드: {{print.file}}}</p><br>
 
