--- a/APAP/main/templates/main/upload.html
+++ b/APAP/main/templates/main/upload.html
@@ -28,19 +28,19 @@
                 <input type="submit" class="btn buy-now" value=" UPLOAD " style="font-size:20px;">
             </div>
             </center>
-            {% comment %} <input type="submit" class="btn buy-now" align="center"value=" UPLOAD ">
-            {% comment %} <button type="submit" class="btn buy-now"> UPLOAD </button> {% endcomment %}
+            <!-- <input type="submit" class="btn buy-now" align="center"value=" UPLOAD "> -->
+            <button type="submit" class="btn buy-now"> UPLOAD </button> 
             </div> 
         </form>
         
     </div>
 
 </section>
-{% comment %} <style>
+<style>
     input.transparent-input{
        background-color:transparent !important;
        border:none !important;
        box-shadow:none !important;
     }
-</style> {% endcomment %}
+</style> 
 {% endblock %}   
