--- a/APAP/main/templates/main/detail.html
+++ b/APAP/main/templates/main/detail.html
@@ -94,7 +94,20 @@
                                     </div>
                                     <div class="media-body">
                                         <h4>배송비</h4>
-                                        <p>{{print.price}}</p>
+                                        <p>{{print.delivery_price}} / n 원</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-xs-6">
+                            <div class="choose_item">
+                                <div class="media">
+                                    <div class="media-left">
+                                        <a href="#"><i class="icofont icofont-star"></i></a>
+                                    </div>
+                                    <div class="media-body">
+                                        <h4>인쇄비</h4>
+                                        <p>{{print.print_price}}원</p>
                                     </div>
                                 </div>
                             </div>
@@ -138,7 +151,7 @@
         </div>
         <div class="form-group col-md-12">
           <a class="gradient_bg_btn" href="{% url 'main:delete' print.id %}">삭제하기</a>
-          {% comment %} <a class="price_btn" href="{% url 'main:update' print.id %}">수정하기</a> {% endcomment %}
+          <a class="price_btn" href="{% url 'main:update' print.id %}">수정하기</a> 
         </div>
     {% else %}
         <div class="form-group col-md-12">
@@ -149,7 +162,7 @@
     <br><br><br><br><br><br>
   </div></center>
         </div></div></section>
-  {% comment %} <div class = "box" style = "width: 500px; height: 500px;">
+  <div class = "box" style = "width: 500px; height: 500px;">
     <table class = "box" style = "text-align:left">
 
     <p>강의명: {{print.schedule.lecture.name}}</p><br>
