--- a/APAP/main/templates/main/home.html
+++ b/APAP/main/templates/main/home.html
@@ -44,8 +44,18 @@
 
 
 <!-- 카드는 나중에 다시 넣어보자 -->
-{% if prints == null %}
-<h1> 에휴 빨리 강의 넣자 </h1>
+{% if schedule != null %}
+<section class="price_table_area" id="price">
+    <div class="container">
+    
+        <div class="app_round_image">
+            <img class="round_c" src="{% static 'image/index/round-circle.png' %}" alt="">
+            
+            <a href="mypage.html" class="app_mobile"><h1> 수강중인<br>강의가<br>없어요!! </h1></a>
+            
+        </div>          
+    </div>
+</section>
 {% else %}
         <section class="price_table_area" id="price">
             <div class="container">
