--- a/APAP/templates/base_index.html
+++ b/APAP/templates/base_index.html
@@ -51,7 +51,7 @@
         <div style="font-color: black; text-align:center; margin-top: 30px; ">
             <a style = "font-family: 'Malssami815'; font-size: 45px;" href = "{% url 'main:home' %}">Afford to Print: 어푸어푸</a>
         </div>
-        <div style ="text-align: right; font-family: '777Balsamtint'; font-size:20px; margin-right: 20px;">
+        <div style ="text-align: right; font-family: '777Balsamtint'; font-size:20px; margin-right: 20px; padding-top: 30px;">
         <!--프로필사진을 누르면 mypage.html으로-->
         <a href = "{% url 'main:mypage' user.username %}" >안녕하세요 {{ user.username }} 님! <img src="{% static 'image/duck2.png'  %}" style = "width: 30px; height: 30px; border-radius: 50%;" title="마이페이지"></a>
         {% comment %} <!--알림-->
